--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
+    "axios": "latest",
     "dayjs": "^1.11.9",
+    "jwt-decode": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-redux": "latest",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "latest",
+    "redux": "latest",
+    "redux-thunk": "latest",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
