--- a/package.json
+++ b/package.json
@@ -1,45 +1,35 @@
 {
-  "name": "react-social-client",
+  "name": "socialape-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/icons": "latest",
-    "axios": "latest",
-    "dayjs": "^1.11.9",
-    "jwt-decode": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "latest",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "latest",
-    "redux": "latest",
-    "redux-thunk": "latest",
-    "web-vitals": "^3.4.0"
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
+    "dayjs": "^1.8.11",
+    "jwt-decode": "^2.2.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "proxy": "https://europe-west1-react-social-784b8.cloudfunctions.net/api"
 }
